Updated with Phone Get all phones

--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -6,6 +6,7 @@
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../css/app.css" media="screen,projection" />
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Addresses</title>
@@ -14,17 +15,15 @@
         <div class="container">
             <div class="row">
                 <div class="col l12">
-                    <table class="highlight addressTable">
+                    <table class="highlight table">
                         <thead>
                         <tr>
-                            <th data-field="fname">First Name</th>
-                            <th data-field="lname">Last Name</th>
-                            <th data-field="street">Street</th>
-                            <th data-field="city">City</th>
+                            <th data-field="fname">Number</th>
+                            <th data-field="lname">Description</th>
                         </tr>
                         </thead>
-                        <tbody class="addressTableBody">
-                        <tr class="addressTableFirstRow">
+                        <tbody class="tableBody">
+                        <tr class="tableBodyFirstRow">
                             <!-- Data will be populated here, from TablePopulator -->
                         </tr>
                         </tbody>
