--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -45,10 +45,13 @@
         <div id="topContainer" style="border-bottom: 3px solid #757575; border-radius: 2px;" class="col l12">
             <h5>Results:</h5>
         </div>
+        <br />
+        <center>
         <div id="resultUserContainer" class="row l12">
             <br />
 
         </div>
+        </center>
     </div>
 <div class="container">
     <div id="bottomContainer" style="border-bottom: 0px solid #757575; border-radius: 2px;" class="#757575 grey darken-1 white-text">
