--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -1,15 +1,19 @@
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+/*body {*/
+    /*display: flex;*/
+    /*min-height: 100vh;*/
+    /*flex-direction: column;*/
+/*}*/
+
+/*main {*/
+    /*flex: 1 0 auto;*/
+/*}*/
+
+.footer-div {
+    border-bottom: 0px solid #757575;
+    border-radius: 2px;
 }
 
-main {
-    flex: 1 0 auto;
+#google-doc-frame iframe {
+    width: 100%;
+    height: 1000px;
 }
-
-
-#resultUserContainer{
-
-}
-
