--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -8,12 +8,14 @@
     /*flex: 1 0 auto;*/
 /*}*/
 
-.footer-div {
-    border-bottom: 0px solid #757575;
-    border-radius: 2px;
-}
-
 #google-doc-frame iframe {
     width: 100%;
     height: 1000px;
+}
+
+.pad-top-20 {
+    padding-top: 20px;
+}
+.pad-bottom-20 {
+    padding-bottom: 20px;
 }
