--- a/src/main/webapp/templates/documentation.html
+++ b/src/main/webapp/templates/documentation.html
@@ -31,13 +31,29 @@
             </div>
 
         </div>
-        <div>
-            <div class="row">
-                <div id="bottomContainer" class="grey darken-1 white-text footer-div">
-                    <p class="center">All Rights Reserved - Gruppe 6</p>
+        <div class="footer-copyright">
+            <div class="row grey darken-1 white-text">
+                <div id="bottomContainer" class="col m3 pad-top-20 pad-bottom-20">
+                    <p class="center">All Rights Reserved</p>
+                </div>
+                <div class="col m6 pad-top-20 pad-bottom-20">
+                    <p>
+                    <div id="authors">Viktor Kim Christiansen, Jonas Schelde, Christopher Poul Rosendorf, William Pfaffe</div>
+                    </p>
+                </div>
+                <div class="col m1 pad-top-20 pad-bottom-20">
+                    <p>
+                    <div id="class">COS</div>
+                    </p>
+                </div>
+                <div class="col m2 pad-top-20 pad-bottom-20">
+                    <p>
+                    <div id="group">Group number 6</div>
+                    </p>
                 </div>
             </div>
         </div>
+
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="../js/materialize.min.js"></script>
