--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -19,3 +19,7 @@
 .pad-bottom-20 {
     padding-bottom: 20px;
 }
+#topContainer {
+    border-bottom: 3px solid #757575;
+    border-radius: 2px;
+}
