--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -49,14 +49,58 @@
                     <button id="searchButton" class="btn waves-effect #757575 grey darken-1" type="submit" onclick="searchFunction()">Submit</button>
                 </div>
             </div>
-            <div id="topContainer" style="border-bottom: 3px solid #757575; border-radius: 2px;" class="col l12">
-                <h5>Results:</h5>
-            </div>
-            <br />
-            <div id="resultUserContainer" class="row l12 center">
-                <!-- Here is the result from API coming out -->
+
+            <div class="row">
+                <div id="topContainer" class="col s12">
+                    <h5>Results:</h5>
+                </div>
             </div>
 
+            <br />
+
+            <div id="resultUserContainer" class="row">
+                
+                <!-- Here is the result from API coming out -->
+                <div class="col s12 m6">
+                    <div class='card-panel #757575 grey darken-1'>
+                        <span class='white-text'>First Name: " + userArr[i][p].firstName + "<br />
+                            Last Name: " + userArr[i][p].lastName + "<br />
+                            Hobbies: " + getHobbies() + "<br />
+                            Address: " + userArr[i][p].address.street + "<br />
+                        </span>
+                    </div>
+                </div>
+
+                <!-- This is a demo Person -->
+                <div class="col s12 m6">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">(firstName)</span>
+                            <p>Last Name: (lastName)</p>
+                            <p>Address: (address)</p>
+                            <p>Primary Hobby: (hobbyNumberOne)</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">Display hobbies</a>
+                            <a href="#">Display phones</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- This is demo content for a spinner -->
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div><div class="gap-patch">
+                        <div class="circle"></div>
+                    </div><div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
         <div class="footer-copyright">
