Reworked populateEngine to new protocol

--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -59,20 +59,8 @@
             <br />
 
             <div id="resultUserContainer" class="row">
-                
-                <!-- Here is the result from API coming out -->
-                <div class="col s12 m6">
-                    <div class='card-panel #757575 grey darken-1'>
-                        <span class='white-text'>First Name: " + userArr[i][p].firstName + "<br />
-                            Last Name: " + userArr[i][p].lastName + "<br />
-                            Hobbies: " + getHobbies() + "<br />
-                            Address: " + userArr[i][p].address.street + "<br />
-                        </span>
-                    </div>
-                </div>
-
                 <!-- This is a demo Person -->
-                <div class="col s12 m6">
+                <div class="resultCard col s12 m6">
                     <div class="card blue-grey darken-1">
                         <div class="card-content white-text">
                             <span class="card-title">(firstName)</span>
@@ -86,20 +74,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- This is demo content for a spinner -->
-                <div class="preloader-wrapper big active">
-                    <div class="spinner-layer spinner-blue-only">
-                        <div class="circle-clipper left">
-                            <div class="circle"></div>
-                        </div><div class="gap-patch">
-                        <div class="circle"></div>
-                    </div><div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                    </div>
-                </div>
-
             </div>
         </div>
 
