--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -59,44 +59,32 @@
             <br />
 
             <div id="resultUserContainer" class="row">
-                <!-- This is a demo Person -->
-                <div class="resultCard col s12 m6">
-                    <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
-                            <span class="card-title">(firstName)</span>
-                            <p>Last Name: (lastName)</p>
-                            <p>Address: (address)</p>
-                            <p>Primary Hobby: (hobbyNumberOne)</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">Display hobbies</a>
-                            <a href="#">Display phones</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
 
-        <div class="footer-copyright">
+        <div id="footer">
             <div class="row grey darken-1 white-text">
-                <div id="bottomContainer" class="col m3 pad-top-20 pad-bottom-20">
+                <center>
+                <div class="col m2">
                     <p class="center">All Rights Reserved</p>
                 </div>
-                <div class="col m6 pad-top-20 pad-bottom-20">
+                <div class="col m6">
                     <p>
                     <div id="authors">Viktor Kim Christiansen, Jonas Schelde, Christopher Poul Rosendorf, William Pfaffe</div>
                     </p>
                 </div>
-                <div class="col m1 pad-top-20 pad-bottom-20">
+                <div class="col m1">
                     <p>
                     <div id="class">COS</div>
                     </p>
                 </div>
-                <div class="col m2 pad-top-20 pad-bottom-20">
+                <div class="col m3">
                     <p>
                     <div id="group">Group number 6</div>
                     </p>
                 </div>
+                </center>
             </div>
         </div>
 
