--- a/src/main/webapp/templates/documentation.html
+++ b/src/main/webapp/templates/documentation.html
@@ -32,7 +32,7 @@
 
         </div>
         <div class="footer-copyright">
-            <div class="row grey darken-1 white-text">
+            <div class="row grey darken-1 white-text no-margin-bottom">
                 <div id="bottomContainer" class="col m3 pad-top-20 pad-bottom-20">
                     <p class="center">All Rights Reserved</p>
                 </div>
