--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -60,12 +60,33 @@
 
             <div id="resultUserContainer" class="row">
 
+                <!-- Here the br's will be replaced with both result content and spinners -->
+
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                <br />
+
             </div>
         </div>
 
         <div id="footer">
-            <div class="row grey darken-1 white-text">
-                <center>
+            <div class="row grey darken-1 white-text no-margin-bottom">
                 <div class="col m2">
                     <p class="center">All Rights Reserved</p>
                 </div>
@@ -84,7 +105,6 @@
                     <div id="group">Group number 6</div>
                     </p>
                 </div>
-                </center>
             </div>
         </div>
 
