--- a/src/main/webapp/templates/phonesTable.html
+++ b/src/main/webapp/templates/phonesTable.html
@@ -41,13 +41,13 @@
                     </select>
                     <label>Filter By</label>
                 </div>
-                <div id="resultQuery" class="input-field col s7">
+                <div id="resultQuery" class="input-field col s6">
                     <input id="searchQuery" type="text" />
                     <label for="searchQuery">Search...</label>
                 </div>
-                <div class="input-field col s3">
-                    <button id="search-button-person" class="btn waves-effect #757575 grey darken-1 margin-bottom-5" type="submit" onclick="searchFunctionPerson()">Search persons</button>
-                    <button id="search-button-company" class="btn waves-effect #757575 grey darken-1" type="submit" onclick="searchFunctionCompany()">Search companies</button>
+                <div class="input-field col s4">
+                    <button id="search-button-person" class="btn waves-effect #757575 grey darken-1" type="submit" onclick="searchFunctionPerson()">Persons</button>
+                    <button id="search-button-company" class="btn waves-effect #757575 grey darken-1" type="submit" onclick="searchFunctionCompany()">Companies</button>
                 </div>
             </div>
 
