--- a/src/main/webapp/templates/search.html
+++ b/src/main/webapp/templates/search.html
@@ -33,10 +33,10 @@
                 <div class="input-field col s2 ">
                     <select id="selectedOption">
                         <option value="" disabled selected>Choose A Filter</option>
-                        <option value="phoneNumber">Phone Number</option>
+                        <option value="phoneNumber">Phone number</option>
                         <option value="CVR">CVR</option>
-                        <option value="personName">Person Names</option>
-                        <option value="hobbies">Hobbies</option>
+                        <option value="name">Name</option>
+                        <option value="hobbies">Hobby</option>
                         <option value="zipcode">Zip Code</option>
                     </select>
                     <label>Filter By</label>
@@ -46,8 +46,9 @@
                     <label for="searchQuery">Search...</label>
                 </div>
                 <div class="input-field col s4">
-                    <button id="search-button-person" class="btn waves-effect #757575 grey darken-1" type="submit" onclick="searchFunctionPerson()">Persons</button>
-                    <button id="search-button-company" class="btn waves-effect #757575 grey darken-1" type="submit" onclick="searchFunctionCompany()">Companies</button>
+                    <button id="search_button_person" class="btn waves-effect #757575 grey darken-1 margin-top-5" type="submit" onclick="searchFunctionPerson()">Persons</button>
+                    <button id="search_button_company" class="btn waves-effect #757575 grey darken-1 margin-top-5" type="submit" onclick="searchFunctionCompany()">Companies</button>
+                    <label class="active" for="search-button-person">Search for</label>
                 </div>
             </div>
 
