--- a/src/main/webapp/templates/search.html
+++ b/src/main/webapp/templates/search.html
@@ -53,8 +53,12 @@
             </div>
 
             <div class="row">
-                <div id="topContainer" class="col s12">
+                <div id="topContainer" class="col s4">
                     <h5>Results:</h5>
+                </div>
+                <div class="col s8 right right-align">
+                    <!-- Modal Trigger -->
+                    <a href="#modal1" class="modal-trigger btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
                 </div>
             </div>
 
@@ -87,6 +91,44 @@
                 </div>
             </div>
         </div>
+
+        <!-- Modal New Person -->
+        <div id="modal1" class="modal modal-fixed-footer">
+            <div class="modal-content">
+
+                <h4>New Person</h4>
+
+                <form method="POST" action="../api/person?useSSL=false" accept-charset="UTF-8">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">account_circle</i>
+                            <input id="per_firstname" name="firstName" type="text" class="validate">
+                            <label for="per_firstname">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">verified_user</i>
+                            <input id="per_lastname" name="lastName" type="tel" class="validate">
+                            <label for="per_lastname">Last Name</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <i class="material-icons prefix">email</i>
+                            <input id="per_email" name="email" type="email" class="validate">
+                            <label for="per_email">Email</label>
+                        </div>
+                    </div>
+                    <button class="btn waves-effect waves-light" type="submit">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Cancel</a>
+            </div>
+        </div>
+
 
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
