Upgraded PersonResource with Post to /api/person and updated search.html with create modal
Everything testet working

--- a/src/main/webapp/templates/documentation.html
+++ b/src/main/webapp/templates/documentation.html
@@ -61,7 +61,7 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="../js/materialize.min.js"></script>
         <script type="text/javascript" src="../js/scripts.js"></script>
-        <!--<script type="text/javascript" src="../js/TablePopulator.js"></script>-->
+        <!--<script type="text/javascript" src="../js/new-person-modal.js"></script>-->
 
     </body>
 </html>
