--- a/src/main/webapp/templates/search.html
+++ b/src/main/webapp/templates/search.html
@@ -2,18 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="../static/images/favicon.png" />
         <!--Import Google Icon Font-->
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
         <link type="text/css" rel="stylesheet" href="../css/app.css" media="screen,projection" />
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="icon"
-              type="image/png"
-              href="/static/images/favicon.png" />
         <title>YellowPages</title>
-
     </head>
     <body>
         <div>
@@ -131,11 +128,8 @@
             </div>
         </div>
         <!-- Modal New Person End -->
-
-
-        <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="../js/materialize.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
         <script type="text/javascript" src="../js/scripts.js"></script>
         <script type="text/javascript" src="../js/new-person-modal.js"></script>
 
