Updated with All JavaScript Error messages | Updated with Create New Person validations
# Small bug fixes
# Error on typing and email
# Fields where not emptied on submit new person
# AJAX changed to standard javascript ajax, for response code testing
# Testet all buttons and possible points
# Updated database with a lot more demo content
# Set up javascript for https://viter.dk/yellowpages

# IT IS READY TO BE BUILD AND UPLOADED TO TOMCAT

--- a/src/main/webapp/templates/search.html
+++ b/src/main/webapp/templates/search.html
@@ -99,19 +99,19 @@
                     <div class="input-field col s6">
                         <i class="material-icons prefix">account_circle</i>
                         <input id="per_firstname" name="firstName" type="text" class="validate">
-                        <label for="per_firstname">First Name</label>
+                        <label for="per_firstname" data-error="Dette er ikke et navn" data-success="Korrekt">First Name</label>
                     </div>
                     <div class="input-field col s6">
                         <i class="material-icons prefix">verified_user</i>
                         <input id="per_lastname" name="lastName" type="tel" class="validate">
-                        <label for="per_lastname">Last Name</label>
+                        <label for="per_lastname" data-error="Dette er ikke et navn" data-success="Korrekt" >Last Name</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="material-icons prefix">email</i>
-                        <input id="per_email" name="email" type="email" class="validate">
-                        <label for="per_email">Email</label>
+                        <input id="per_email"name="email" type="email" class="validate">
+                        <label for="per_email" data-error="Dette er ikke en email" data-success="Korrekt" >Email</label>
                     </div>
                 </div>
                 <a href="#!" class="modal-close modal-action">
